# config/swagger/postSwagger.yaml
@@ -4,7 +4,7 @@ info:
   title: SMU_UMC_MINI_PROJECT - Swagger
   description: SMU_UMC_MINI_PROJECT - Swagger입니다.
 paths:
-  /api/posts/get:
+  /api/posts:
     get:
       tags:
         - Posts
@@ -39,7 +39,7 @@ paths:
                       example: '2023-06-19T12:34:56Z'
         '500':
           description: 서버 오류
-  /api/posts/get/{post_id}:
+  /api/posts/{post_id}:
     get:
       tags:
         - Posts
@@ -81,7 +81,7 @@ paths:
           description: 게시글을 찾을 수 없음
         '500':
           description: 서버 오류
-  /api/posts/patch/{post_id}:
+  /api/posts/{post_id}:
     patch:
       tags:
         - Posts
@@ -164,7 +164,7 @@ paths:
                 message:
                   type: string
                   example: 서버 에러, 관리자에게 문의 바랍니다.
-  /api/posts/create:
+  /api/posts:
     post:
       tags:
         - Posts
@@ -211,7 +211,7 @@ paths:
                     example: '2023-06-19T12:34:56Z'
         '500':
           description: 서버 오류
-  /api/posts/delete/{post_id}:
+  /api/posts/{post_id}:
     delete:
       tags:
         - Posts
@@ -229,5 +229,27 @@ paths:
           description: 게시글 삭제 성공!
         '404':
           description: 게시글을 찾을 수 없음
+        '500':
+          description: 서버 오류
+  /api/image:
+    post:
+      tags:
+        - Image
+      summary: 이미지 업로드
+      consumes:
+        - multipart/form-data # 문서 타입 지정
+      parameters:
+        - in: formData
+          name: image
+          type: file
+          description: 파일 업로드
+      # 아래 주석은 로그인 구현후 풀 것
+      # - in: formData
+      #   name: userId
+      #   type: integer
+      #   description: 사용자 아이디
+      responses:
+        '200':
+          description: 이미지 업로드 완료!
         '500':
           description: 서버 오류
