# index.js
@@ -10,7 +10,7 @@ import mongoose from 'mongoose';
 import cors from 'cors';
 import { postRouter } from './srcs/routes/post.route.js';
 import { commentRouter } from './srcs/routes/comment.route.js';
-
+import { imageRouter } from './srcs/routes/image.route.js';
 const app = express();
 const port = 3000;
 
@@ -31,6 +31,7 @@ app.use(
 // routes
 app.use('/api/posts', postRouter);
 app.use('/api/comments', commentRouter);
+app.use('/api/image', imageRouter);
 
 app.use((err, req, res, next) => {
   res.locals.message = err.message;
